Fix spacing issues with chips in search and filter

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -153,9 +153,11 @@
       border: 0;
     }
 
-    // hide chips lead when there are in panel
-    // FIXME: this should be handled in HTML/React, not CSS
     .p-chip {
+      margin-bottom: $spv--small;
+
+      // hide chips lead when there are in panel
+      // FIXME: this should be handled in HTML/React, not CSS
       .p-chip__lead {
         display: none;
       }
@@ -177,7 +179,7 @@
       position: relative;
 
       &[aria-expanded='false'] {
-        max-height: 4rem;
+        max-height: 5rem; // 2 rows of chips
       }
     }
 
